<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/IHWWhite"
    android:orientation="vertical"
    tools:context=".HoursclassfragActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="8dp">

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:theme="@style/DaysSwitchesTheme" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    android:theme="@style/DaysSwitchesTheme" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:theme="@style/DaysSwitchesTheme" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="8dp">

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    android:theme="@style/DaysSwitchesTheme" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:theme="@style/DaysSwitchesTheme" />

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:theme="@style/DaysSwitchesTheme" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    android:theme="@style/DaysSwitchesTheme" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingRight="16dp"
                android:text="From:"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="18:00 PM"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="45dp"
                android:layout_height="44dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/clock" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingRight="35dp"
                android:text="To:"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="19:00 PM"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="45dp"
                android:layout_height="44dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/clock" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/addHoursButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal|center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/outlinebutton"
            android:elevation="10dp"
            android:foregroundGravity="bottom"
            android:text="@string/AddHours"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <include
            layout="@layout/hourslist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal|center"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:foregroundGravity="bottom"
            android:text="@string/Done"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/IHWWhite"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
