<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="352dp"
        android:layout_height="163dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/signUpInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstNameText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/roundtext"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/FirstName"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/IHWBrown"
            android:textColorHint="@color/TextHintColor"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/lastNameText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundtext"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/LastName"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/IHWBrown"
            android:textColorHint="@color/TextHintColor"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundtext"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/textEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/IHWBrown"
            android:textColorHint="@color/TextHintColor"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundtext"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/textPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/IHWBrown"
            android:textColorHint="@color/TextHintColor"
            android:textSize="25sp" />

    </LinearLayout>

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/roundbuttonbrown"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/IHWWhite"
        android:textSize="20sp"
        app:initialCornerAngle="20dp"
        app:spinning_bar_color="@color/IHWWhite" />

</LinearLayout>
