<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarInFirstAddClass"
            layout="@layout/toolbar">

        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/NewCourseColorHint">

                <EditText
                    android:id="@+id/className"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/className"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/IHWBrown">

                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/NewCourseColorHint">

                <EditText
                    android:id="@+id/classPoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/classCredit"
                    android:inputType="textNoSuggestions|numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/IHWBrown">

                </EditText>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:text="@string/startDate"
                android:textColor="@color/IHWBrown"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/startDateButton"
                    android:layout_width="54dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/startDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/endDate"
                android:textColor="@color/IHWBrown"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingRight="16dp">

                <Button
                    android:id="@+id/endDateButton"
                    android:layout_width="54dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/endDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/colorChooseButton"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/oval_button"
                android:text="@string/courseColor"
                android:textAllCaps="false"
                android:textColor="@color/IHWWhite"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/NextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:foregroundGravity="bottom"
                android:text="@string/Next"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/IHWWhite"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
